# sumofit

./: .buildinfo  README.md  environment.yml  generate_environment_yaml.py  generate_from_enviroment.py  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  requirements.txt  search.html  update_dependencies.py  usage.html
.doctrees/: environment.pickle  index.doctree  installation.doctree  usage.doctree
.github/workflows/: deploy.yml
_sources/: index.rst.txt
docs/source/: conf.py
