[build-system]
requires = [ "setuptools>=42", "setuptools_scm",]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ "sumofit",]

[tool.setuptools.package_data]
my_package = [ "requirements.txt", "README.md",]

[tool.setuptools.dependencies]
install_requires = [ "python=3.12.9", "ca-certificates", "openssl", "pyyaml",]

[tool.setuptools.version]
use_scm_version = true
